--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dating-app",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,5 +12,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "path": "^0.12.7"
+  },
+  "engines" : {
+    "node": "6.6.0"
   }
 }
